[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scripts/Levels.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Character.gd" type="Script" id=2]
[ext_resource path="res://Assets/hiccup/Level_4.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/RandomHiccupsPlayer.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sounds/hic_3.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/hic_4.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/hic_2.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/hic_5.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/hiccup/tilesets/BIEN_CADRER.tres" type="TileSet" id=10]
[ext_resource path="res://Assets/hiccup/Level_0.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/hiccup/Level_1.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/hiccup/Level_5.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/hiccup/Level_3.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Sounds/hic_1.mp3" type="AudioStream" id=15]
[ext_resource path="res://Assets/hiccup/Level_2.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/Hero/pixil-frame-2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Hero/pixil-frame-1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Hero/pixil-frame-10.png" type="Texture" id=19]
[ext_resource path="res://Assets/Hero/pixil-frame-7.png" type="Texture" id=20]
[ext_resource path="res://Assets/Hero/pixil-frame-0.png" type="Texture" id=21]
[ext_resource path="res://Assets/Hero/pixil-frame-6.png" type="Texture" id=22]
[ext_resource path="res://Assets/Hero/pixil-frame-4.png" type="Texture" id=23]
[ext_resource path="res://Assets/Hero/pixil-frame-9.png" type="Texture" id=24]
[ext_resource path="res://Assets/Hero/pixil-frame-3.png" type="Texture" id=25]
[ext_resource path="res://Assets/Hero/pixil-frame-5.png" type="Texture" id=26]
[ext_resource path="res://Assets/Hero/pixil-frame-8.png" type="Texture" id=27]
[ext_resource path="res://Assets/hiccup/Level_6.tscn" type="PackedScene" id=28]
[ext_resource path="res://Assets/hiccup/Level_7.tscn" type="PackedScene" id=29]

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 192, 128 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 20 )

[sub_resource type="SpriteFrames" id=62]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 19 ) ],
"loop": true,
"name": "walking",
"speed": 20.0
} ]

[node name="Root" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 10 )
format = 1

[node name="Levels" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Level_0" parent="Levels" instance=ExtResource( 11 )]
position = Vector2( 256, 0 )

[node name="Level_1" parent="Levels" instance=ExtResource( 12 )]
position = Vector2( 64, -1024 )

[node name="HiccupStart" type="Area2D" parent="Levels/Level_1"]
position = Vector2( 576, 768 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level_1/HiccupStart"]
position = Vector2( 128, 64 )
shape = SubResource( 63 )

[node name="Level_2" parent="Levels" instance=ExtResource( 16 )]
position = Vector2( 1408, -832 )

[node name="Level_3" parent="Levels" instance=ExtResource( 14 )]
position = Vector2( 1216, -2176 )

[node name="Level_4" parent="Levels" instance=ExtResource( 3 )]
position = Vector2( 1408, -3648 )

[node name="Level_5" parent="Levels" instance=ExtResource( 13 )]
position = Vector2( 1408, -4608 )

[node name="Level_6" parent="Levels" instance=ExtResource( 28 )]
position = Vector2( -1664, 64 )

[node name="Level_7" parent="Levels" instance=ExtResource( 29 )]
position = Vector2( 1664, -5568 )

[node name="MainCharacter" type="KinematicBody2D" parent="." groups=["player"]]
position = Vector2( 768, 832 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCharacter"]
shape = SubResource( 1 )

[node name="RandomHiccupsPlayer" type="AudioStreamPlayer" parent="MainCharacter"]
script = ExtResource( 5 )
effects_list = [ ExtResource( 15 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ) ]

[node name="TimerHiccup" type="Timer" parent="MainCharacter"]
wait_time = 5.0

[node name="Camera2D" type="Camera2D" parent="MainCharacter"]
rotation = -1.74846e-07
scale = Vector2( 2, 2 )
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="HiccupShakeTimer" type="Timer" parent="MainCharacter"]
wait_time = 0.4
one_shot = true

[node name="Navigation2D" type="Navigation2D" parent="MainCharacter"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="MainCharacter"]
frames = SubResource( 62 )
animation = "idle"

[node name="Guards" type="Node2D" parent="."]

[connection signal="body_entered" from="Levels/Level_1/HiccupStart" to="MainCharacter" method="_on_HiccupStart_body_entered"]
[connection signal="timeout" from="MainCharacter/TimerHiccup" to="MainCharacter" method="_on_TimerHiccup_timeout"]
[connection signal="timeout" from="MainCharacter/HiccupShakeTimer" to="MainCharacter" method="_on_HiccupShakeTimer_timeout"]
